Switch window layout to CSS grid to fix alignment issues

--- a/src/Applications/Settings/Settings.module.css
+++ b/src/Applications/Settings/Settings.module.css
@@ -33,6 +33,7 @@
 	border-left: 1px solid gray;
 	width: calc(100% - 1em);
 	padding: 0.5em;
+	overflow: auto;
 }
 
 .about {
