--- a/src/Applications/Terminal/Terminal.module.css
+++ b/src/Applications/Terminal/Terminal.module.css
@@ -9,3 +9,8 @@
 		color: var(--color-primary);
 	}
 }
+
+.terminalContainer {
+	height: 100%;
+	overflow-y: auto;
+}
